# agentic_ai

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  package.json
agents/: Dockerfile
agents/common/: __init__.py  contracts.py  llm.py  runtime.py
agents/compliance_agent/: __init__.py  agent.py
agents/deployer_agent/: __init__.py  agent.py
agents/provisioner_agent/: __init__.py  agent.py
agents/requirement_agent/: __init__.py  agent.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/api/backend/[...path]/: route.ts
apps/web/app/projects/: page.tsx
iac/platform/: build-agent.yml  build-backend.yml  build-web.yml  main.tf  outputs.tf  runner-buildspec.yml  variables.tf  versions.tf
policies/: checkov.yaml  terraform.rego
samples/: company-standards.md
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  agentcore.py  aws_readonly.py  aws_resources.py  github_client.py  main.py  memory.py  models.py  settings.py  state_archive.py  store.py  workflow.py
services/orchestrator/tests/: test_agents.py  test_api.py
templates/terraform/ec2-httpd/: main.tf.tmpl  variables.tf.tmpl
templates/terraform/s3-bucket/: backend.tf.tmpl  main.tf.tmpl
templates/terraform/s3-lambda-api/: backend.tf.tmpl  main.tf.tmpl  policy-checks.md  variables.tf.tmpl
