[project]
name = "agentcore-orchestrator"
version = "0.1.0"
description = "FastAPI orchestrator for the AgentCore multi-agent deployment MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "PyGithub>=2.4.0",
  "python-multipart>=0.0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
